frontend/test/should_fail/exectype_SetVisited2.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=::varia && i:string="harrharr" && y:boolean=true && {x.visited[i]=y});
	}
}